--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-webcam": "^7.1.1",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
